# emedia.maxperl

./: CMakeLists.txt  README.md  UbuntuApp.pl  clickable.yaml  default.edj  emedia-contenthub.json  emedia.apparmor  emedia.desktop.in  install-perl.pl  main.cpp  manifest.json.in  patch-emotion.patch  patch-emotion.pl  patch-gstreamer.patch  patch-gstreamer.pl  run_app.sh  snapcraft.yaml
pEFL/lib/perl5/aarch64-linux/: perllocal.pod
pEFL/lib/perl5/aarch64-linux/auto/pEFL/: .packlist
pEFL/lib/perl5/aarch64-linux/pEFL/: const-c.inc  const-ecore-c.inc  const-edje-c.inc  const-eina-c.inc  const-emotion-c.inc  const-evas-c.inc
pEFL/man/man3/: pEFL.3  pEFL::Ecore.3  pEFL::Ecore::Evas.3  pEFL::Ecore::Event.3  pEFL::Ecore::Event::Key.3  pEFL::Ecore::Event::MouseButton.3  pEFL::Ecore::Event::MouseMove.3  pEFL::Ecore::Event::MouseWheel.3  pEFL::Ecore::Event::SignalExit.3  pEFL::Ecore::Event::SignalRealtime.3  pEFL::Ecore::Event::SignalUser.3  pEFL::Ecore::EventFilter.3  pEFL::Ecore::EventHandler.3  pEFL::Ecore::FdHandler.3  pEFL::Ecore::File.3  pEFL::Ecore::FileMonitor.3  pEFL::Ecore::Idler.3  pEFL::Ecore::Mainloop.3  pEFL::Ecore::Poller.3  pEFL::Ecore::Time.3  pEFL::Ecore::Timer.3  pEFL::Edje.3  pEFL::Edje::Message::Float.3  pEFL::Edje::Message::FloatSet.3  pEFL::Edje::Message::Int.3  pEFL::Edje::Message::IntSet.3  pEFL::Edje::Message::String.3  pEFL::Edje::Message::StringFloat.3  pEFL::Edje::Message::StringInt.3  pEFL::Edje::Message::StringSet.3  pEFL::Edje::Object.3  pEFL::Eina.3  pEFL::Eina::List.3  pEFL::Elm.3  pEFL::Elm::Actionslider.3  pEFL::Elm::App.3  pEFL::Elm::Bg.3  pEFL::Elm::Box.3  pEFL::Elm::Bubble.3  pEFL::Elm::Button.3  (+88 more)
perl5/: ContentHub.pm  vKbd.pm
po/: emedia.maxperl.pot
qml/: ImportPage.qml  Main.qml
